# linkedin-profile-agent

./: .dockerignore  .gitignore  Dockerfile.dev  README.md  compose.yml  env.example  pyproject.toml  requirements.txt
app/: linkedin_tool.py  main.py
