[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Muhammad Ahmad <ahmadshaukat_4@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = {extras = ["standard"], version = "^0.30.3"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
